# lara

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.rst  _config.yml  benchmark_tutorial.ipynb  index.md
benchmark/: benchmark_tutorial.ipynb  mcc_eval.py
src/: data_types.hpp  edge_filter.hpp  io.hpp  lagrange.hpp  lara.cpp  matching.hpp  parameters.hpp  rna_score_matrices.hpp  score.hpp  subgradient_solver.hpp  subgradient_solver_simd.hpp
